Added initial GUI codes

--- a/config.yaml
+++ b/config.yaml
@@ -12,5 +12,10 @@ DETECTION:
 TRACKER:
   TRACK_DET_CONF: 0.5
 
-PROCESS_MAX_QUEUE_SIZE: 1
+CAMERA:
+  VIDEO_SOURCE: "walking.avi"
+  PROCESS_MAX_QUEUE_SIZE: 1
+  WIDTH: 1600
+  HEIGHT: 900
+  
   
